# system_programming_hub

./: .gitignore  README.md
Advanced System Programming/cs4157-columbia/: Readme.md  note02-memory-1.md
OS/bash/: comparing_methods.sh  path.sh
OS/data_representations/: byte_array.c
assembly/: README.md  eax_sample.asm  ebp_sample.asm  ebp_sample2.asm  ebp_sample_ext.md  ebx_sample.asm  ecx_sample.asm  edi_sample.asm  edx_sample.asm  esi_sample.asm  esp_sample.asm
assembly/cpp2asm/: Makefile  addition.cpp  aliasPointers.cpp  container.cpp  directlyReturn.S  directlyReturn.cpp  floatingPoint.cpp  grep  inline.cpp  mul.cpp
cmake/empty_cmake/: CMakeLists.txt
gdb+/: README.md  bubble_sort.c  hello.c
gdb+/pointers/: transpose_matrix  transpose_matrix.cpp
llvm/: commands.txt
llvm/llvm_ir/: callee.c
llvm/llvm_pass/: README.md
memory/: password
memory/MMAP/: memoryMap.c  memoryMapInStructure.cpp
memory/Pages/: GetUserSpace.cpp
memory/Password/: password.c
memory/Volatile/: Makefile  Readme.md  const.c  volatile.c
performance/: Analysis.md  FlameGraphs.md  Makefile  README.md  Some_Useful_One_Liners.md  sample_lambda_mt  sample_mul_threads
performance/AIO/: Makefile  asyn_file_read.c  async_io  async_io.c  sync_io  sync_io.c
performance/Multi-Threads/: sample_lambda_mt.cpp  sample_mul_threads.cpp
performance/SIMD/: Makefile  add_base  add_base.cpp  add_sse  add_sse.cpp  mov_sse  mov_sse.cpp  non-simd.perf  non-simd.perf.old  non_simd_report.txt  pi_approximation  pi_approximation_avx2.cpp  shuffle_sse  (+5 more)
system_call/: demo_ptrace.c  demo_wait.c
(+80 files in other folders)
